--- a/style/index.css
+++ b/style/index.css
@@ -32,7 +32,7 @@ body {
   width: 80%;
   height: 250px;
   background-color: #767585;
-  border: 5px solid black;
+  /* border: 5px solid black; */
   border-radius: 10px 10px 20% 10px;
 
   display: flex;
