--- a/style/index.css
+++ b/style/index.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: rgb(46, 237, 244);
+  background-color: rgb(3, 35, 64);
 }
 
 #gameboy {
@@ -24,17 +24,26 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  box-shadow:inset 0px 0px 10px black, inset 0px -20px 2px #9d9d9f;
+}
+
+#rayadivisoria {
+  margin-top: 30px;
+  width: 100%;
+  height: 10px;
+  box-shadow: inset 0px 2px 5px rgb(60, 60, 60);
 }
 
 #Bordepantalla {
   position: relative;
-  top: 50px;
+  top: 15px;
   width: 80%;
   height: 250px;
   background-color: #767585;
   /* border: 5px solid black; */
+  box-shadow: inset 0px 0px 20px rgb(46, 46, 46);
   border-radius: 10px 10px 20% 10px;
-
+  border: 3px solid rgb(63, 63, 63);
   display: flex;
   align-items: center;
 
@@ -140,4 +149,10 @@ button {
   box-shadow: inset 0px 3px 2px white, -2.5px 5px 6px black;
   cursor: pointer;
 
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  #gameboy {
+    transform: scale(.7);
+  }
 }
