--- a/style/index.css
+++ b/style/index.css
@@ -150,7 +150,7 @@ body {
 
   & .crosspad {
     position: absolute;
-    width: 16%;
+    width: 90px;
     height: 30px;
     background-color: rgb(22, 22, 22);
     border-radius: 10px;
